# electronic-dance-music

./: .gitignore  CMakeLists.txt  README.md  edm.cpp  edm_bias.h  edm_plan.txt  fix_edm.cpp  fix_edm.h  fix_edm_pair.cpp  fix_edm_pair.h  grid.h
algorithms/: mcgdp_hills.py  neighbor.py
algorithms/hill_design/: equations.aux  equations.tex  hill_design.py  hill_worksheet.nb
algorithms/hill_design/lammps_test/: lammps.in  plot_hills.py  test.edm
cp2k/: notes.txt
culib/: CMakeLists.txt  edm.cu  edm.cuh  edm_bias.cpp  edm_bias.cu  edm_bias.cuh  gaussian_grid.cu  gaussian_grid.cuh  grid.cu  grid.cuh
lammps/: Install.sh  fix_edm.cpp  fix_edm.cu  fix_edm.h  fix_edm_pair.cpp  fix_edm_pair.cu  fix_edm_pair.h
lammps/lammps_makefiles/: Makefile  Makefile.ubuntu
lib/: CMakeLists.txt  edm.cpp  edm.h  edm_bias.cpp  edm_bias.cu  edm_bias.cuh  edm_bias.h  edm_bias_gpu.cu  edm_bias_gpu.cuh  gaussian_grid.cpp  gaussian_grid.cu  gaussian_grid.cuh  gaussian_grid.h  gaussian_grid_gpu.cu  gaussian_grid_gpu.cuh  gpu_gaussian_grid.cu  gpu_gaussian_grid.cuh  grid.cpp  grid.cuh  grid.h  grid_gpu.cu  grid_gpu.cuh
python/: CMakeLists.txt  edm_bias_py.cpp  edm_python.cxx  setup.py
python-example/: EDM.ipynb  input.edm
python/edm/: __init__.py  edm_bias_py.h  version.py
src/: gaussian_grid.h
tests/: 1.grid  2.grid  3.grid  CMakeLists.txt  edm_gpu_test.cu  edm_test.cpp  edm_test.cu  edm_timing_test.cu  read_test.edm  sampled_1d.grid  sanity.edm
